<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfilFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/kullanici"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:textSize="50dp"
            android:textColor="@color/black"
            android:text="@string/kullaniciadi" />
        <TextView
            android:id="@+id/ismi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:textSize="50dp"
            android:textColor="@color/black"
            android:text="@string/isim" />
        <TextView
            android:id="@+id/soyisim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:textSize="50dp"
            android:textColor="@color/black"
            android:text="@string/soyisim" />
        <TextView
            android:id="@+id/cinsi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:textSize="50dp"
            android:textColor="@color/black"
            android:text="@string/cinsiyetBilgisi" />

        <Button
            android:id="@+id/butoncikis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/btnLogout" />

        <Button
            android:id="@+id/btn_ilanlarim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profil_iln" />
        <Button
            android:id="@+id/btn_ilanver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="İlan Ver" />


    </LinearLayout>

</RelativeLayout>